# Aether-Terminal

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yaml  security.yaml
assets/themes/: cyberpunk.toml  matrix.toml
bpf/: net_monitor.bpf.c  process_monitor.bpf.c  syscall_monitor.bpf.c
chart/: Chart.yaml  values.yaml
chart/templates/: configmap.yaml  deployment.yaml  service.yaml
crates/aether-analyze/: CLAUDE.md  Cargo.toml
crates/aether-analyze/src/: engine.rs  error.rs  lib.rs  store.rs
crates/aether-analyze/src/analyzers/: anomaly.rs  capacity.rs  correlation.rs  correlator.rs  mod.rs  trend.rs
crates/aether-analyze/src/collectors/: cgroup.rs  mod.rs  procfs.rs
crates/aether-analyze/src/recommendations/: generator.rs
crates/aether-analyze/src/rules/: app_rules.rs  builtin.rs  engine.rs  mod.rs  types.rs
crates/aether-api/: CLAUDE.md  Cargo.toml
crates/aether-api/proto/: aether.proto
crates/aether-api/src/: convert.rs  error.rs  lib.rs  server.rs
crates/aether-config/: CLAUDE.md  Cargo.toml
crates/aether-config/src/: error.rs  lib.rs  loader.rs  types.rs
crates/aether-core/: CLAUDE.md  Cargo.toml
crates/aether-core/src/: arbiter.rs  error.rs  event_bus.rs  events.rs  graph.rs  lib.rs  metrics.rs  models.rs  traits.rs
crates/aether-discovery/: CLAUDE.md  Cargo.toml
crates/aether-discovery/src/: engine.rs  error.rs  kubernetes.rs  lib.rs  probe.rs  scanner.rs
crates/aether-ebpf/: CLAUDE.md  Cargo.toml
crates/aether-ebpf/src/: error.rs  events.rs  lib.rs  loader.rs  probes.rs  ring_buffer.rs
crates/aether-gamification/: CLAUDE.md  Cargo.toml
crates/aether-gamification/src/: achievements.rs  error.rs  hp.rs  lib.rs  storage.rs  xp.rs
crates/aether-ingestion/: CLAUDE.md  Cargo.toml
crates/aether-ingestion/src/: ebpf_bridge.rs  error.rs  lib.rs  pipeline.rs  sysinfo_probe.rs
crates/aether-mcp/: CLAUDE.md  Cargo.toml
crates/aether-mcp/src/: arbiter.rs  error.rs  lib.rs  server.rs  tools.rs
crates/aether-mcp/src/transport/: mod.rs  sse.rs  stdio.rs
crates/aether-metrics/: CLAUDE.md  Cargo.toml
crates/aether-metrics/src/: error.rs  lib.rs  scraper.rs
crates/aether-metrics/src/consumer/: client.rs  mod.rs  query.rs  types.rs
crates/aether-metrics/src/exporter/: encode.rs  mod.rs  registry.rs  server.rs
crates/aether-metrics/src/scrape/: mod.rs  parser.rs  scraper.rs
crates/aether-output/: CLAUDE.md  Cargo.toml
crates/aether-output/src/: discord.rs  error.rs  file.rs  lib.rs  pipeline.rs  serialize.rs  slack.rs  stdout.rs  telegram.rs
crates/aether-predict/: CLAUDE.md  Cargo.toml
crates/aether-predict/src/: engine.rs  error.rs  features.rs  inference.rs  lib.rs  models.rs  window.rs
crates/aether-prober/: CLAUDE.md  Cargo.toml
crates/aether-prober/src/: dns.rs  engine.rs  error.rs  http.rs  lib.rs  tcp.rs  tls.rs
crates/aether-render/: CLAUDE.md  Cargo.toml
crates/aether-render/src/: braille.rs  effects.rs  lib.rs  palette.rs
crates/aether-render/src/engine/: camera.rs  layout.rs  mod.rs  projection.rs  rasterizer.rs  scene.rs  shading.rs
crates/aether-render/src/tui/: app.rs  arbiter.rs  diagnostics.rs  help.rs  input.rs  mod.rs  network.rs  overview.rs  rules.rs  tabs.rs  world3d.rs
crates/aether-script/: CLAUDE.md  Cargo.toml
crates/aether-script/src/: ast.rs  codegen.rs  engine.rs  error.rs  hot_reload.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  types.rs
crates/aether-terminal/: CLAUDE.md  Cargo.toml
crates/aether-terminal/src/: main.rs
crates/aether-web/: CLAUDE.md  Cargo.toml  build.rs
crates/aether-web/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
crates/aether-web/frontend/src/: App.tsx
crates/aether-web/frontend/src/components/: ArbiterQueue.tsx  ConnectionEdge.tsx  DiagnosticDetail.tsx  DiagnosticList.tsx  Graph3D.tsx  HostSelector.tsx  Layout.tsx  MetricCard.tsx  NetworkTable.tsx  ProcessDetail.tsx  ProcessNode.tsx  ProcessTable.tsx  SparklineChart.tsx  StatsBar.tsx  SystemCharts.tsx
crates/aether-web/frontend/src/hooks/: useWorldState.ts
crates/aether-web/frontend/src/pages/: ArbiterPage.tsx  DiagnosticsPage.tsx  Graph3DPage.tsx  MetricsPage.tsx  NetworkPage.tsx  OverviewPage.tsx
crates/aether-web/frontend/src/stores/: metricsStore.ts  worldStore.ts
crates/aether-web/frontend/src/types/: index.ts
crates/aether-web/src/: api.rs  embedded.rs  error.rs  lib.rs  server.rs  state.rs  ws.rs
docs/: architecture.md  configuration.md  getting-started.md  integrations.md
docs/decisions/: 001-sysinfo-over-ebpf.md  002-custom-rasterizer.md  003-dual-mcp-transport.md  004-ebpf-native-telemetry.md  005-jit-rule-dsl.md  006-on-device-predictive-ai.md  007-deterministic-diagnostics.md  008-prometheus-bidirectional.md
docs/plans/: 2026-03-08-aether-terminal-design.md  2026-03-08-full-implementation-plan.md  2026-03-10-mvp-evolution-design.md  2026-03-13-global-vision.md  2026-03-13-roadmap.md  2026-03-13-v1-production-diagnostics-design.md
docs/plans/done/: 2026-03-08-aether-terminal-design.md  2026-03-08-orchestrator-v3.md  2026-03-10-mvp-implementation-plan.md  2026-03-11-web-ui-design.md
rules/: default.aether
tools/orchestrator/: agent_runner.py  config.py  executor.py  main.py  run-pipeline.sh  state.py  verifier.py
tools/orchestrator/tasks/: ms1-workspace-setup.yaml  ms10-core-models.yaml  ms10-rules-engine.yaml  ms12-prometheus.yaml  ms13-integration.yaml  ms5-polish.yaml  ms7-lexer-parser.yaml  ms8-inference.yaml  ms8-predict-integration.yaml  ms9-web-frontend.yaml  p0-bugfix-critical.yaml  p0-bugfix-low.yaml  p0-bugfix-medium.yaml  p1-refactor-traits-api.yaml  p2-analyze-rules.yaml  p2-api.yaml  p2-config.yaml  p2-core-types.yaml  p2-discovery.yaml  p2-integration.yaml  p2-output.yaml  p2-packaging.yaml  p2-prober.yaml  p2-scraper.yaml
tools/orchestrator/tasks/done/: ms1-ingestion-sysinfo.yaml  ms1-ingestion.yaml  ms1-workspace-setup.yaml  (+28 more)
(+2 files in other folders)
