[workspace]
resolver = "2"
members = [
    "crates/aether-terminal",
    "crates/aether-core",
    "crates/aether-ingestion",
    "crates/aether-render",
    "crates/aether-mcp",
    "crates/aether-gamification",
    "crates/aether-ebpf",
    "crates/aether-predict",
    "crates/aether-script",
    "crates/aether-web",
    "crates/aether-analyze",
    "crates/aether-metrics",
    "crates/aether-api",
    "crates/aether-config",
    "crates/aether-discovery",
]
