[package]
name = "aether-core"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.7"
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
