[package]
name = "aether-discovery"
version = "0.1.0"
edition = "2021"

[features]
default = []
kubernetes = ["kube", "k8s-openapi"]

[dependencies]
aether-core = { path = "../aether-core" }
tokio = { version = "1", features = ["net", "time"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
kube = { version = "0.93", features = ["client", "runtime"], optional = true }
k8s-openapi = { version = "0.22", features = ["latest"], optional = true }
