[package]
name = "aether-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-core = { path = "../aether-core" }
aether-ebpf = { path = "../aether-ebpf" }
glam = "0.29"
sysinfo = "0.34"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
