[package]
name = "aether-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-core = { path = "../aether-core" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
rmcp = { version = "1", features = ["server", "server-side-http", "transport-async-rw"] }
thiserror = "2"
tracing = "0.1"
