[package]
name = "aether-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-core = { path = "../aether-core" }
async-trait = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
glam = "0.29"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
