[package]
name = "aether-predict"
version = "0.1.0"
edition = "2021"

[features]
default = []
predict = ["tract-onnx"]

[dependencies]
aether-core = { path = "../aether-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio-util = "0.7"
tracing = "0.1"
tract-onnx = { version = "0.21", optional = true }

[dev-dependencies]
glam = "0.29"
