[package]
name = "aether-prober"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-core = { path = "../aether-core" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2"
tokio = { version = "1", features = ["net", "time"] }
tracing = "0.1"
