[package]
name = "aether-terminal"
version = "0.1.0"
edition = "2021"

[features]
ebpf = ["aether-ebpf/ebpf"]

[dependencies]
aether-core = { path = "../aether-core" }
aether-ingestion = { path = "../aether-ingestion" }
aether-render = { path = "../aether-render" }
aether-mcp = { path = "../aether-mcp" }
aether-gamification = { path = "../aether-gamification" }
aether-ebpf = { path = "../aether-ebpf" }
aether-predict = { path = "../aether-predict" }
aether-script = { path = "../aether-script" }
aether-web = { path = "../aether-web" }
aether-analyze = { path = "../aether-analyze" }
aether-metrics = { path = "../aether-metrics" }
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
open = "5"
