[package]
name = "aether-web"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-core = { path = "../aether-core" }
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.10"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
rust-embed = "8"
tokio-util = "0.7"
